package structural.bridge;

public interface Api {
    void send(String message);
}
