package structural.bridge;

public abstract class Format {

    protected String text;
    protected Api api;

    public abstract void sendMessage();
}
