@startuml
'https://plantuml.com/class-diagram

class BriggeRunner {
    run() : void
}

BriggeRunner --> Format

interface Format {
    text : String
    api : Api
}

Format .|> Api : Use

class JsonFormat {
    sendMessage() : void
}

class XmlFormat {
    sendMessage() : void
}

Format <|-- JsonFormat
Format <|-- XmlFormat

interface Api {
    send(String) : void
}


class RestApi {
    send(String) : void
}

class XmlApi {
    send(String) : void
}

Api <|-- RestApi
Api <|-- XmlApi

@enduml